--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "emotion": "^10.0.9",
+    "lodash.chunk": "^4.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "@emotion/styled": "^10.0.0",
     "react-scripts": "3.0.1",
     "styled-components": "^4.3.1"
   },
